--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="about">
      <div class="about-content">
        <div class="profile-image">
-         <img src="C:\Users\Nishita Pendyala\OneDrive\Pictures\UAB\OPT-NISHITA\Nishita_Portfolio\nishita_pic.jpg" alt="Profile Picture">
+         <img src="nishita_pic.jpg" alt="Profile Picture">
        </div>
        <div class="about-text">
          <h2>About Me</h2>
